-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.15.0
-
None
-
Linux ARM64 and AMD64, Qt 5.12-5.15
-
-
4fc20da20163e3b30fb07aa8d657457717ba98ee (qt/qtremoteobjects/dev) d4957cd786ac95337abf9a66e93dbce08c1a9f92 (qt/qtremoteobjects/5.15) 0624860bcfc869f83e35dcc469d12b7377b78def (qt/qtremoteobjects/5.12)
After restarting a QtRemoteObjects server (source) twice, the client (replica) doesn't reconnect.
This can easily be reproduced with the simpleswitch example:
- Start directconnectclient
- Start directconnectserver
- Restart directconnectserver
- Restart directocnnectserver
| For Gerrit Dashboard: QTBUG-85137 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 304921,2 | Also reconnect on QLocalSocket::PeerClosedError | 5.15 | qt/qtremoteobjects | Status: MERGED | +2 | 0 |
| 304922,2 | Also reconnect on QLocalSocket::PeerClosedError | 5.12 | qt/qtremoteobjects | Status: MERGED | +2 | 0 |
| 305001,3 | Also reconnect on QLocalSocket::PeerClosedError | dev | qt/qtremoteobjects | Status: MERGED | +2 | 0 |