Also reconnect on QLocalSocket::PeerClosedError

Fixes: QTBUG-85137
Change-Id: I1fb96f5779361613bbe1b9ca272856aa579e7f17
Reviewed-by: Brett Stottlemyer <bstottle@ford.com>
(cherry picked from commit 4fc20da20163e3b30fb07aa8d657457717ba98ee)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>